# examples-bazel-containers-hasher

./: BUILD.bazel  WORKSPACE  go.mod  go.sum
cmd/api/: BUILD.bazel  main.go
